src/Components/Post.module.css
.post-container {
  background-color: white;
  margin: 1rem 0;
  padding: 1rem;
}

.highlight {
  color: red;
}

/* i {
  margin: 1rem 5rem;
  max-width: 5rem;
  cursor: pointer;
  display: inline-block;
} */

.buttons-container{
  display: flex;
  justify-content: space-around;
  margin: 1rem 0;
}

.user-details {
  text-decoration: none;
  color: #999;
  display: inline-block;
  margin-bottom: 1rem;
  display: flex;
  gap: 1rem;
  align-items: center;
}

.full-name {
  color: black;
  font-weight: 600;
}

.popup-box {
  position: fixed;
  background-color: rgba(204, 204, 204, 0.5);
  width: 100%;
  height: 100vh;
  top: 0;
  left: 0;
}

.box {
  width: 30rem;
  border: 1px solid var(--primary);
  margin: 0 auto;
  margin-top: 50px;
  background-color: white;
  border-radius: 5px;
  padding: 1rem;
}

.box textarea {
  border: none;
  background-color: var(--bg-color);
}

.box textarea:focus {
  outline: none;
}

.box button {
  display: inline-block;
  text-align: right;
  right: 0;
  margin-right: 1rem;
  margin-top: 1rem;
  padding: 0.5rem 2rem;
  background-color: var(--primary);
  border: none;
  color: white;
}

.likes {
  margin: 0 0.5rem;
}

.content {
  line-height: 1.5;
  text-align: left;
}

.profilePic{
  max-width: 2rem;
  border-radius: 50%;
}

